# cros-flashrom

./: .gitignore  82802ab.c  Makefile  OWNERS  a25.c  action_descriptor.c  action_descriptor.h  amd_imc.c  at25.c  atahpt.c  big_lock.c  bitbang_spi.c  board_enable.c  buspirate_spi.c  cbtable.c  chipdrivers.h  chipset_enable.c  cli_classic.c  cli_common.c  cli_mfg.c  cli_output.c  coreboot_tables.h  cros_alias.c  cros_ec.c  cros_ec.h  cros_ec_commands.h  cros_ec_dev.c  cros_ec_dev.h  cros_ec_i2c.c  cros_ec_lock.c  cros_ec_lock.h  cros_ec_lpc.c  cros_ec_wp.c  cros_ec_wp_dep.c  cros_wp_rollout.c  cros_wp_rollout.h  dediprog.c  dep_wp_statusreg.c  dep_writeprotect.c  dep_writeprotect.h  (+99 more)
include/: chipdrivers.h  flash.h  programmer.h  spi.h
tests/: chip_wp.c  dediprog.c  dummyflasher.c  init_shutdown.c  lifecycle.c  linux_mtd.c  linux_spi.c  mediatek_i2c_spi.c  meson.build  nicrealtek.c  parade_lspcon.c  raiden_debug_spi.c  realtek_mst_i2c_spi.c  test.c  test_action_descriptor.c  tests.c  tests.h  wp_chip_info.c  wp_chip_info.h  wp_enable_disable.c  wp_tests.c  wp_tests.h  wraps.h
tests/include/: test.h
tests/tests_v1/: chip_size.sh  wp-range.sh
tests/tests_v2/: test_v2.sh
util/flashchips_parser/: parse.py
util/flashrom_tester/: Cargo.toml
util/flashrom_tester/flashrom/src/: cmd.rs  lib.rs
util/flashrom_tester/src/: cmd.rs  cros_sysinfo.rs  flashrom.rs  lib.rs  logger.rs  main.rs  mosys.rs  rand.rs  rand_util.rs  tester.rs  tests.rs  types.rs  utils.rs
util/ich_descriptors_tool/: Makefile  ich_descriptors_tool.c
