[package]
name = "flashrom_tester"
version = "1.6.0"
authors = ["Edward O'Callaghan <quasisec@chromium.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
built = { version = "0.3", default-features = false, features = ["serialized_time", "serialized_version"] }
chrono = "0.4"
clap = { version = "2.33", default-features = false }
log = { version = "0.4", features = ["std"] }
rand = "0.6.4"
serde_json = "1"
sys-info = "0.5.7"

[build-dependencies]
built = { version = "0.3", default-features = false, features = ["serialized_time", "serialized_version"] }
